--- a/projects/fe-editable-row-table/src/lib/fe-editable-row-table.component.scss
+++ b/projects/fe-editable-row-table/src/lib/fe-editable-row-table.component.scss
@@ -1,5 +1,4 @@
 .table-container {
-    max-width: 1000px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -16,14 +15,14 @@ table.fe-table {
 table.fe-table caption,
 table.fe-table th,
 table.fe-table td {
-    padding: 24px;
+    padding: 4px;
     text-align: center;
 }
 
 table.fe-table caption {
     padding: 12px;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 table.fe-table th {
@@ -54,11 +53,15 @@ table.fe-table tbody tr td input {
     box-shadow: 1px 1px 4px 1px rgb(0 0 0 / 11%);
 }
 
+.fe-table-actions {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .btn {
     padding: 8px;
     border: none;
-    border-radius: 8px;
-    min-width: 64px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
